--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<title>La Chouette agence - Webdesign sur Lyon</title>
 
  
-
+	<meta name="google-site-verification" content="yZLIe1PMcU2eaM2JvNd2rF9la9e8qfY659Ux23YrsUQ" />
     
 <!-- Analytics -->
  
