--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" 
 	content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
     <meta name="description" 
-	content="La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.">
+	agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet. Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
