reduire poids images

--- a/index.html
+++ b/index.html
@@ -46,13 +46,15 @@
 
 			<nav class="navbar row">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
+					<a class="navbar-brand" href="index.html">
+						<img src="img/la-chouette-agence.png"
 							alt="La Chouette Agence" height="40" /></a>
 					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 						data-toggle="collapse" data-target=".navbar-1">
 						<span class="sr-only">Ouvrir ou fermer le menu de navigation</span>
-						<span aria-hidden="true"><span class="icon-bar"></span><span class="icon-bar"></span><span
-								class="icon-bar"></span></span>
+						<span aria-hidden="true"><span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span></span>
 					</button>
 				</div>
 				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
