--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
         <div class="container bloc-sm">
           <nav class="navbar row">
             <div class="navbar-header">
-              <a class="navbar-brand" href="index.html"
-                ><img
-                  src="img/la-chouette-agence.png"
+              <a class="navbar-brand" href="index.html">
+                <img src="img/la-chouette-agence.png"
                   alt="Logo de l'entreprise La Chouette Agence"
                   height="40"
               /></a>
@@ -92,8 +91,7 @@
         <div class="container bloc-lg">
           <div class="row tight-width-whitespace black-background">
             <div class="col-sm-12">
-              <img
-                src="img/logo.png"
+              <img src="img/logo.png"
                 class="center-block image-resize-mode"
                 width="100"
                 alt="Logo de la chouette agence, une Chouette stylisée sur fond noir"
@@ -253,13 +251,13 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/1.jpg"
+                data-lightbox="img/1.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Refonte d'un site web pour un journal local"
                 data-frame="snapshot-lb"
                 ><div class="img-frame">
                   <img
-                    src="img/1.jpg"
+                    src="img/1.webp"
                     alt="Des livres"
                     class="img-responsive center-block portfolio-thumb"
                   /></div
@@ -275,12 +273,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/2.jpg"
+                data-lightbox="img/2.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site web pour photographes"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/2.jpg"
+                  src="img/2.webp"
                   class="img-responsive center-block portfolio-thumb"
                   alt="Une femme en train d'utiliser un appareil photo de haute qualité"
               /></a>
@@ -297,12 +295,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/3.bmp"
+                data-lightbox="img/3.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/3.bmp"
+                  src="img/3.webp"
                   class="img-responsive center-block portfolio-thumb"
                   alt="Matériel pour l'audio-visuel, objectifs d'appareil photo, micro, drone, etc..."
               /></a>
@@ -318,12 +316,12 @@
             <div class="col-sm-6">
               <a
                 href="#"
-                data-lightbox="img/4.bmp"
+                data-lightbox="img/4.webp"
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
                 ><img
-                  src="img/4.bmp"
+                  src="img/4.webp"
                   class="img-responsive center-block portfolio-thumb"
                   alt="Un bureau avec du matériel de petit bricolage, ciseaux, rubans"
               /></a>
