--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
       name="keywords"
       content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"
     />
-    <meta name="description" agence de web design qui aide les entreprises à
-    devenir attractives et visibles sur Internet. Nous souhaitons aider les
-    entreprises de la région Lyonnaise à se développer et à connaître le succès.
-    Nous travaillons pour aider les entreprises locales à attirer de nouveaux
-    clients.">
+    <meta name="description" 
+    content="La chouette agence est une agence de web design
+     qui aide les entreprises à devenir attractives et visibles sur Internet.
+      Nous souhaitons aider les entreprises de la région Lyonnaise 
+      à se développer et à connaître le succès. 
+      Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.">
 
     <meta
       name="viewport"
@@ -43,7 +44,7 @@
           <nav class="navbar row">
             <div class="navbar-header">
               <a class="navbar-brand" href="index.html">
-                <img src="img/la-chouette-agence.png"
+                <img src="img/la-chouette-agence.webp"
                   alt="Logo de l'entreprise La Chouette Agence"
                   height="40"
               /></a>
@@ -66,7 +67,7 @@
                 </li>
 
                 <li>
-                  <a href="contact.html">Contactez nous</a>
+                  <a href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -99,8 +100,13 @@
               <h1 class="text-center hero-bloc-text tc-white">
                 La chouette agence
               </h1>
-              <div class="text-center"></div>
+              <div class="text-center">
+                <a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+								id="cta-hero">Contact</a>
+              </div>
             </div>
+
+
           </div>
         </div>
       </div>
