--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="Default">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="" />
@@ -36,8 +36,8 @@
             <div class="navbar-header">
               <a class="navbar-brand" href="index.html"
                 ><img
-                  src="img/la-chouette-agence.png"
-                  alt="Logo de l'entreprise La Chouette Agence"
+                  src="img/la-chouette-agence.webp"
+                  alt="La Chouette Agence"
                   height="40"
               /></a>
               <button
