--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="keywords" content="" />
-    <meta name="description" content="" />
+    <meta name="description" content="La chouette agence est une agence de web design
+    qui aide les entreprises à devenir attractives et visibles sur Internet.
+     Nous souhaitons aider les entreprises de la région Lyonnaise 
+     à se développer et à connaître le succès. 
+     Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients." />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
