--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     qui aide les entreprises à devenir attractives et visibles sur Internet.
      Nous souhaitons aider les entreprises de la région Lyonnaise 
      à se développer et à connaître le succès. 
-     Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients." />
-    <meta
-      name="viewport"
+     Nous travaillons pour aider les entreprises
+      locales à attirer de nouveaux clients." />
+    <meta name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
