--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="" />
+    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design" />
     <meta name="description" content="La chouette agence est une agence de web design
     qui aide les entreprises à devenir attractives et visibles sur Internet.
      Nous souhaitons aider les entreprises de la région Lyonnaise 
