--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
      Nous travaillons pour aider les entreprises
       locales à attirer de nouveaux clients." />
     <meta name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+  
+    content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
     <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
 
@@ -22,8 +23,8 @@
     <script src="./js/jquery-2.1.0.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/blocs.js"></script>
-    <script src="./js/jqBootstrapValidation.js"></script>
-    <script src="./js/formHandler.js"></script>
+    <script src="./js/jquery.touchSwipe.js" defer></script>
+    <script src="./js/gmaps.js"></script>
     <title>Contact</title>
 
     <!-- Analytics -->
@@ -41,7 +42,7 @@
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/la-chouette-agence.webp"
-                  alt="La Chouette Agence"
+                  alt="Logo de l'entreprise La Chouette Agence"
                   height="40"
               /></a>
               <button
