--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="utf-8" />
+    <!--<meta charset="utf-8" />
     <meta
       name="keywords"
       content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design"
@@ -23,13 +23,32 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
+    
 
     <script src="./js/jquery-2.1.0.js"></script>
     <script src="./js/bootstrap.js"></script>
     <script src="./js/blocs.js"></script>
     <script src="./js/jquery.touchSwipe.js" defer></script>
     <script src="./js/gmaps.js"></script>
-    <title>La Chouette agence - Webdesign sur Lyon!!</title>
+    <title>La Chouette agence - Webdesign sur Lyon!!</title>-->
+    <meta charset="utf-8">
+	<meta name="keywords" content="site web, site internet, photographie, agence design, web design, lyon">
+	<meta name="description"
+		content="La chouette agence est une agence de web design qui aide 
+		les entreprises à devenir attractives et visibles sur Internet.
+		 Prêt pour redonner vie à votre projet ? Contactez notre équipe !">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<link rel="shortcut icon" type="image/jpg" href="./img/favicon.jpg">
+
+	<link preload rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+		integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+	<script defer src="https://kit.fontawesome.com/949298e37f.js" crossorigin="anonymous"></script>
+
+	<link preload rel="stylesheet" type="text/css" href="./assets/et-line.min.css">
+	<link preload rel="stylesheet" type="text/css" href="./assets/style.min.css">
+	<script defer src="./assets/index.min.js"></script>
+
+	<title>Contact - La Chouette agence</title>
 
     <!-- Analytics -->
 
