--- a/contact.html
+++ b/contact.html
@@ -101,63 +101,42 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-6">
-              <form
-                id="form_1"
-                novalidate
-                success-msg="Your message has been sent."
-                fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!"
-              >
+              <form id="form_1" novalidate success-msg="Votre message a bien été envoyé."
+                fail-msg="Il semble que notre serveur mail ne réponde pas. Nous sommes désolés de ce dérangement.">
                 <div class="form-group">
-                  <label> Nom </label>
-                  <input id="name" class="form-control" required />
-                </div>
-                <div class="form-group">
-                  <label> Adresse email </label>
-                  <input
-                    id="email"
-                    class="form-control"
-                    type="email"
-                    required
-                  />
-                </div>
-                <div class="form-group">
-                  <label> Comment nous avez-vous connu ? </label>
-                  <input
-                    class="form-control"
-                    type="email"
-                    required
-                    id="input_504"
-                  />
+                  <label>
+                    Nom
+                    <input id="name" class="form-control" required />
+                  </label>
                 </div>
                 <div class="form-group">
                   <label>
-                    Brief de votre projet (Ajoutez autant de détails que
-                    nécessaire)<br /> </label
-                  ><textarea
-                    id="message"
-                    class="form-control"
-                    rows="4"
-                    cols="50"
-                    required
-                  ></textarea>
+                    Adresse email
+                    <input id="email" class="form-control" type="email" required />
+                  </label>
                 </div>
-                <button
-                  class="
-                    bloc-button
-                    btn btn-lg btn-block
-                    cta-hero
-                    btn-atomic-tangerine
-                  "
-                  type="submit"
-                >
+                <div class="form-group">
+                  <label>
+                    Comment nous avez-vous connu ?
+                    <input class="form-control" required id="input_504" />
+                  </label>
+                </div>
+                <div class="form-group">
+                  <label>
+                    Brief de votre projet (Ajoutez autant de détails que nécessaire)
+                    <textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+                  </label>
+                </div>
+                <button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
+                  type="submit">
                   Envoyer
                 </button>
               </form>
             </div>
             <div class="col-sm-6">
-              <p class="pText">
-                contact@lachouetteagence.com<br />2 place Sathonay 69001 Lyon<br />Ouvert
-                de 9h à 18h, du lundi au vendredi<br />
+              <p>
+                contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
+                au vendredi<br>
               </p>
             </div>
           </div>
