--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <script src="./js/blocs.min.js"></script>
     <script src="./js/jquery.touchSwipe.min.js" defer></script>
     <script src="./js/gmaps.min.js"></script>
+
+    <script src="./js/jquery-2.1.0.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/blocs.js"></script>
+    <script src="./js/jquery.touchSwipe.js" defer></script>
+    <script src="./js/gmaps.js"></script>
     <title>La Chouette agence - Webdesign sur Lyon!!</title>
 
     <!-- Analytics -->
