--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="col-sm-12 text-center">
               <h2>
                 La Chouette agence est une
-                <strong>agence de web design basé à Lyon</strong> qui aide les
+                agence de web design basé à Lyon qui aide les
                 entreprises à devenir attractives et visibles sur Internet.
               </h2>
             </div>
@@ -140,11 +140,11 @@
                   "
                 ></span>
               </div>
-              <h3 class="mg-md text-center"><strong>Web design</strong></h3>
+              <h3 class="mg-md text-center">Web design</h3>
               <p class="text-center pText">
                 Que vous ayez un site web qui a besoin d'un rafraîchissement ou
                 que vous partiez de zéro, laissez-nous vous réaliser un
-                <strong>design</strong> dont vous serez fier.
+                design dont vous serez fier.
               </p>
             </div>
             <div class="col-sm-4">
