--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script src="./js/jquery-2.1.0.min.js"></script>
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/blocs.min.js"></script>
-    <script src="./js/jquery.touchSwipe.min.js" defer></script>
+    <script src="./js/jquery.touchSwipe.min.js" ></script>
     <script src="./js/gmaps.min.js"></script>
     
     <title>La Chouette agence - Webdesign sur Lyon!!</title>
@@ -289,7 +289,7 @@
         </div>
       </div>
 
-      
+
       <!-- bloc-5-cta END -->
 
       <!-- Footer - bloc-8 -->
