--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- bloc-0 END -->
 
       <!-- bloc-1-presentation -->
-      <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+      <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture b-parallax"
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
@@ -174,7 +174,7 @@
 
       <!-- bloc-3-what-i-do -->
       <div class="bloc tc-white bgc-atomic-tangerine bg-presentation
-       d-bloc bloc-bg-texture texture-paper b-parallax"
+       d-bloc bloc-bg-texture b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
@@ -273,7 +273,7 @@
        <!-- bloc-4-portfolio END -->
 
       <!-- bloc-5-cta -->
-      <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+      <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture" id="bloc-5-cta">
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12">
